feature/init-project - test double payment