@@ -11,7 +11,6 @@ import cz.ivosahlik.ordering.system.restaurant.service.domain.outbox.model.Order
 import org.springframework.stereotype.Component;
 
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Component
 public class RestaurantMessagingDataMapper {
@@ -32,7 +31,7 @@ public class RestaurantMessagingDataMapper {
                                         .productId(new ProductId(UUID.fromString(avroModel.getId())))
                                         .quantity(avroModel.getQuantity())
                                         .build())
-                        .collect(Collectors.toList()))
+                        .toList())
                 .price(restaurantApprovalRequestAvroModel.getPrice())
                 .createdAt(restaurantApprovalRequestAvroModel.getCreatedAt())
                 .build();
